# RUST-chromiuim

./: .gitignore  BUILD.gn  CI_DOCUMENTATION.md  Cargo.toml  README.md  args.gn.template  chromium_checkout.local.json.example  chromium_import_manifest.json  chromium_integration_checklist.json  chromium_next_tasks.json  chromium_rust_safety_candidates.json  fuzz_corpus_manifest.json  p0_hot_leaf_registry.json
budgets/: cookie_canonicalizer_perf.json  css_tokenizer_perf.json  http_header_scanner_perf.json  mojo_validator_perf.json  rust_artifacts_size.json  url_canonicalizer_perf.json
cpp/: cookie_canonicalizer_adapter.cc  cookie_canonicalizer_adapter.h  cookie_canonicalizer_baseline.h  css_tokenizer_adapter.cc  css_tokenizer_adapter.h  css_tokenizer_baseline.h  http_header_scanner_adapter.cc  http_header_scanner_adapter.h  http_header_scanner_baseline.h  mojo_validator_adapter.cc  mojo_validator_adapter.h  mojo_validator_baseline.h  test_fixtures.h  url_canonicalizer_adapter.cc  url_canonicalizer_adapter.h  url_canonicalizer_baseline.h
cpp_bench/: main.cc
cpp_fuzz/: main.cc
cpp_test/: main.cc
docs/: chromium_integration_roadmap.md  chromium_rust_perf_size_policy.md
docs/adr/: 0001-performance-size-first-rust.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: http_scan_fuzz.rs
include/chromium_rust_perf/: cookie_canonicalizer_ffi.h  css_tokenizer_ffi.h  cxx_bridge.rs.h  http_header_scanner_ffi.h  mojo_validator_ffi.h  url_canonicalizer_ffi.h
rust/ffi_static/: Cargo.toml  build.rs
rust/ffi_static/src/: cxx_bridge.rs  lib.rs  task_runner_bridge.rs
rust/hot_leaf/cookie_canonicalizer/: Cargo.toml
rust/hot_leaf/cookie_canonicalizer/src/: lib.rs
rust/hot_leaf/css_tokenizer/: Cargo.toml
rust/hot_leaf/css_tokenizer/src/: lib.rs
rust/hot_leaf/http_header_scanner/: Cargo.toml
rust/hot_leaf/http_header_scanner/src/: lib.rs
rust/hot_leaf/mojo_validator/: Cargo.toml
rust/hot_leaf/mojo_validator/src/: lib.rs
rust/hot_leaf/url_canonicalizer/: Cargo.toml
rust/hot_leaf/url_canonicalizer/src/: lib.rs
tests/: test_chromium_checkout_config.py  test_chromium_checkout_preflight.py  test_chromium_cl_handoff.py  test_chromium_import.py  test_chromium_import_consistency.py  test_chromium_integration_checklist.py  test_chromium_next_tasks.py  test_chromium_rust_safety_candidates.py  test_emit_fuzz_corpus_replay.py  test_fuzz_corpus_manifest.py  test_p0_hot_leaf_registry.py  test_perf_stability.py  test_progress_report.py  test_reports_manifest.py  test_rust_hot_leaf_guard.py  test_rust_perf_gate.py  test_rust_size_gate.py  test_select_chromium_next_task.py  test_standalone_readiness_report.py  test_standalone_readiness_runner.py  test_standalone_reports.py
tools/: activate_chromium_env.ps1  check_chromium_checkout_preflight.py  check_chromium_import_consistency.py  check_chromium_integration_checklist.py  check_chromium_integration_readiness.ps1  check_chromium_next_tasks.py  check_chromium_rust_safety_candidates.py  check_fuzz_corpus_manifest.py  check_p0_hot_leaf_registry.py  check_perf_stability.py  chromium_checkout_config.py  emit_chromium_cl_handoff.py  emit_chromium_import_report.py  emit_fuzz_corpus_replay.py  emit_fuzz_corpus_report.py  emit_p0_artifact_summary.py  emit_progress_report.py  emit_reports_manifest.py  emit_rollback_gate.py  emit_standalone_readiness_report.py  prepare_chromium_import.ps1  run_all_gates.ps1  run_cpp_bench.ps1  run_cpp_tests.ps1  run_fuzz_corpus_replay.ps1  run_local_fuzz.ps1  run_rollback_gate.ps1  run_size_gate.ps1  run_standalone_readiness.ps1  rust_hot_leaf_guard.py  rust_perf_gate.py  rust_size_gate.py  select_chromium_next_task.py  setup_chromium_checkout.ps1
