[workspace]
members = [
    "rust/hot_leaf/http_header_scanner",
    "rust/hot_leaf/url_canonicalizer",
    "rust/hot_leaf/mojo_validator",
    "rust/hot_leaf/css_tokenizer",
    "rust/ffi_static"
]
default-members = [
    "rust/hot_leaf/http_header_scanner",
    "rust/hot_leaf/url_canonicalizer",
    "rust/hot_leaf/mojo_validator",
    "rust/hot_leaf/css_tokenizer"
]
resolver = "2"

[workspace.package]
edition = "2021"
license = "BSD-3-Clause"
version = "0.1.0"

[profile.release]
codegen-units = 1
debug = false
lto = true
opt-level = "z"
overflow-checks = false
strip = "symbols"
panic = "abort"

[profile.bench]
codegen-units = 1
debug = false
lto = "thin"
opt-level = 3
overflow-checks = false
strip = "symbols"

[workspace.dependencies]
cxx = { version = "1.0", default-features = false, features = ["alloc"] }
