[package]
name = "chromium_rust_perf_ffi_static"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false

[lib]
crate-type = ["staticlib"]

[features]
default = []
async-prototype = ["chromium_rust_mojo_validator/prototype"]
cxx-bridge = ["dep:cxx", "dep:cxx-build"]
prototype = ["async-prototype", "cxx-bridge"]

[dependencies]
chromium_rust_http_header_scanner = { path = "../hot_leaf/http_header_scanner", default-features = false }
chromium_rust_url_canonicalizer = { path = "../hot_leaf/url_canonicalizer", default-features = false }
chromium_rust_mojo_validator = { path = "../hot_leaf/mojo_validator", default-features = false }
chromium_rust_css_tokenizer = { path = "../hot_leaf/css_tokenizer", default-features = false }
chromium_rust_cookie_canonicalizer = { path = "../hot_leaf/cookie_canonicalizer", default-features = false }
cxx = { workspace = true, optional = true }

[build-dependencies]
cxx-build = { version = "1.0", optional = true }
